Fix header and more spacing

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ main {
 }
 
 img {
-    padding: 20px;
+    padding: 20px 20px 20px 0px;
     width: 200px;
     height: 200px;
 }
@@ -36,16 +36,25 @@ h2 {
     margin: 0;
 }
 
-
 header {
     background-color: rgb(11, 35, 51);
     margin: 0px;
-    display: flex;
 }
 
-nav {
-    font-size: 16ppx;
+.container {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    max-width: 800px;
+    margin: auto;
+}
+
+nav a {
+    font-size: 16px;
     color: white;
+    text-decoration: none;
+    padding: 10px;
+    display: inline-block;
 }
 
 h1 {
